fix: add missing "position_on" for amendments when present

--- a/issues/1068/amendments.yaml
+++ b/issues/1068/amendments.yaml
@@ -2,6 +2,7 @@ messages:
   - type: amendment
     target:
       publication: E118_IIN
+      position_on: 2013-11-15
     contents:
       en:
         type: doc
