--- a/issues/1107/amendments.yaml
+++ b/issues/1107/amendments.yaml
@@ -207,6 +207,7 @@ messages:
   - type: amendment
     target:
       publication: Q708_SANC
+      position_on: 2014-12-15
     contents:
       en:
         type: doc
